[package]
name = "commerce-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-session = "3.0.0"
async-std = "1.12.0"
async-trait = "0.1.64"
axum = "0.6.4"
axum-auth = "0.4.0"
axum-server = { version = "0.3", features = ["tls-rustls"] }
axum-sessions = "0.4.1"
chrono = { version = "0.4.23", features = ["serde"] }
data-encoding = "2.3.3"
diesel = { version = "2.0.0", features = ["chrono", "postgres", "uuid", "numeric"] }
dotenvy = "0.15"
http = "0.2.8"
hyper = { version = "0.14", features = ["full"] }
jsonwebtoken = "8.2"
log = "0.4.17"
log4rs = "1.2.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower_governor = "0.0.4"
tower-http = { version = "0.3.5", features = ["cors", "full", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
validator = { version = "0.16.0", features = ["derive"] }
base64 = "0.21.0"
